Switch User, test

--- a/settings.yml
+++ b/settings.yml
@@ -3,6 +3,6 @@ all_hash: '4qJXaaOjOaLmMED'
 all_aid: 'O72a8e3'
 all_name: 'hyxpk - Little Nuns'
 all_desc: 'Little Nuns art by @hyxpk - https://twitter.com/hyxpk'
-subreddit: 'LittleNuns'
+subreddit: 'spsseano'
 database: 'database.db'
 table: 'littlenuns'
