Prep for Inital Run

--- a/settings.yml
+++ b/settings.yml
@@ -1,8 +1,9 @@
 user: 'hyxpk'
-all_hash: '4qJXaaOjOaLmMED'
-all_aid: 'O72a8e3'
+all_hash: '5dfhFff1J7kM47T'
+all_aid: 'Xg4pbxt'
 all_name: 'hyxpk - Little Nuns'
 all_desc: 'Little Nuns art by @hyxpk - https://twitter.com/hyxpk'
-subreddit: 'spsseano'
+subreddit: 'LittleNuns'
 database: 'database.db'
 table: 'littlenuns'
+number: 'number.txt'
