Convert System To Package Structure Format
MAJOR CHANGES
1) Package File Structure
Switch to using the package structure format. Each api client has been
broken into it's own module (imgur, reddit, twitter) as well as the
database and class that links them together. The primary file to call
to run the whole thing is now `main.py`.

2) Database Structure
The database structure has also been changed to make the key names more
clear and verbose. It's also been seperated into a deeper document so
there are top level keys for the comic, twitter, imgur, and reddit.
Those then have related values under them (twitter user name is under
the twitter key). There is also a new meta table added that keeps info
about the comic as a whole. Info like the current number, imgur album
info, subreddit to post to, twitter user info, ect.

Because the new format is incompatible with the old one a convert tool
is included in this release (and will be removed in future ones). It's
advisable to make a backup of the database before running the conversion.
The tool will create the `meta` table. Number may be improperly added
and will need to be manually set. It then converts all the entries to
the best of it's abilities.

MINOR CHANGES
1) Disable Reddit inbox replies
Reddit submissions have disabled inbox replies.

2) Switch to database tracking number
Database now tracks the current comic number in the meta table
instead of an external file

3) Better Logging
Added some more clear logging. Stoped using logging.warn which has been
deprecated and switch to warning.

BUG FIXES
1) Reverse recent tweet status list
Tweet statuses are recieved from newest to oldest. Used to number them in
that order to which is backwards. Now reverse the list in the
TwitterApiClient when it gets the list.

2) Retries check if there are attempted posts
When there are no new posts to make, `upload()` returns `None` otherwise
it returns the list of reddit submission urls. Previously the retry loop
was checking if the 

--- a/settings.yml
+++ b/settings.yml
@@ -1,9 +1,9 @@
 user: 'hyxpk'
 all_hash: '5dfhFff1J7kM47T'
 all_aid: 'Xg4pbxt'
-all_name: 'hyxpk - Little Nuns'
-all_desc: 'Little Nuns art by @hyxpk - https://twitter.com/hyxpk'
+all_name: 'hyxpk'
+all_title: 'Little Nuns'
+all_url: 'https://twitter.com/hyxpk'
 subreddit: 'LittleNuns'
 database: 'database.db'
 table: 'littlenuns'
-number: 'number.txt'
