--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 imgurpython==1.1.7
-praw==7.1.4
-python-dotenv==0.15.0
-python_twitter==3.5
+praw==7.2.0
+python-dotenv==0.16.0
+python-twitter==3.5
 PyYAML==5.4.1
-tinydb==4.3.0
+tinydb==4.4.0
